crates/ruff_python_parser/tests/snapshots/invalid_syntax@statements__match__as_pattern_3.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/statements/match/as_pattern_3.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..136,
        body: [
            Match(
                StmtMatch {
                    node_index: NodeIndex(None),
                    range: 0..120,
                    subject: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 6..13,
                            id: Name("subject"),
                            ctx: Load,
                        },
                    ),
                    cases: [
                        MatchCase {
                            range: 103..120,
                            node_index: NodeIndex(None),
                            pattern: MatchClass(
                                PatternMatchClass {
                                    node_index: NodeIndex(None),
                                    range: 108..117,
                                    cls: Dict(
                                        ExprDict {
                                            node_index: NodeIndex(None),
                                            range: 108..109,
                                            items: [],
                                            runtime_values: None,
                                        },
                                    ),
                                    arguments: PatternArguments {
                                        range: 109..117,
                                        node_index: NodeIndex(None),
                                        patterns: [
                                            MatchAs(
                                                PatternMatchAs {
                                                    node_index: NodeIndex(None),
                                                    range: 110..116,
                                                    pattern: Some(
                                                        MatchAs(
                                                            PatternMatchAs {
                                                                node_index: NodeIndex(None),
                                                                range: 110..111,
                                                                pattern: None,
                                                                name: Some(
                                                                    Identifier {
                                                                        id: Name("x"),
                                                                        range: 110..111,
                                                                        node_index: NodeIndex(None),
                                                                    },
                                                                ),
                                                            },
                                                        ),
                                                    ),
                                                    name: Some(
                                                        Identifier {
                                                            id: Name("y"),
                                                            range: 115..116,
                                                            node_index: NodeIndex(None),
                                                        },
                                                    ),
                                                },
                                            ),
                                        ],
                                        keywords: [],
                                    },
                                    runtime_patterns: None,
                                    runtime_kwd_attrs: None,
                                    runtime_kwd_patterns: None,
                                },
                            ),
                            guard: None,
                            body: [
                                Expr(
                                    StmtExpr {
                                        node_index: NodeIndex(None),
                                        range: 119..120,
                                        value: NumberLiteral(
                                            ExprNumberLiteral {
                                                node_index: NodeIndex(None),
                                                range: 119..120,
                                                value: Int(
                                                    1,
                                                ),
                                            },
                                        ),
                                    },
                                ),
                            ],
                            runtime_body: None,
                        },
                    ],
                },
            ),
            Pass(
                StmtPass {
                    node_index: NodeIndex(None),
                    range: 131..135,
                },
            ),
        ],
        runtime_body: None,
    },
)
```
## Errors

  |
2 |     #     Not in the mapping start token set, so the list parsing bails
3 |     #     v
4 |     case {(x as y): 1}:
  |           ^ Syntax Error: invalid syntax
5 |         pass
  |


  |
2 |     #     Not in the mapping start token set, so the list parsing bails
3 |     #     v
4 |     case {(x as y): 1}:
  |          ^ Syntax Error: invalid value for a class pattern
5 |         pass
  |


  |
2 |     #     Not in the mapping start token set, so the list parsing bails
3 |     #     v
4 |     case {(x as y): 1}:
  |                      ^ Syntax Error: invalid syntax
5 |         pass
  |


  |
2 |     #     Not in the mapping start token set, so the list parsing bails
3 |     #     v
4 |     case {(x as y): 1}:
  |                       ^ Syntax Error: invalid syntax
5 |         pass
  |


  |
2 |     #     Not in the mapping start token set, so the list parsing bails
3 |     #     v
4 |     case {(x as y): 1}:
  |                        ^ Syntax Error: invalid syntax
5 |         pass
  |


  |
3 |     #     v
4 |     case {(x as y): 1}:
5 |         pass
  |        ^ Syntax Error: unexpected indent


  |
4 |     case {(x as y): 1}:
5 |         pass
  |             ^ Syntax Error: invalid syntax
